--- a/.gitignore
+++ b/.gitignore
@@ -398,3 +398,18 @@ FodyWeavers.xsd
 
 # JetBrains Rider
 *.sln.iml
+
+
+# Add all aml files
+.aml*
+.python-version
+
+# Add virtual environment
+venv/
+
+# LLama-CPP Folder
+llama.cpp/
+
+# Adding model folder
+
+model/
