--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,7 @@ tqdm = "4.66.4"
 wheel = "0.43.0"
 llama-cpp-python = "0.3.6"
 huggingface-hub = "0.27.1"
+transformers = "*"
 azure-ai-ml = "*"
 azure-identity = "*"
 azure-common = "*"
