--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,7 +31,9 @@ tqdm = "4.66.4"
 wheel = "0.43.0"
 llama-cpp-python = "0.3.6"
 huggingface-hub = "0.27.1"
+torch = "*"
 transformers = "*"
+sentencepiece = "*"
 azure-ai-ml = "*"
 azure-identity = "*"
 azure-common = "*"
